remove 'current' version